force-app/main/default/objects/vf_Training__c/vf_Training__c.object-meta.xml
<CustomObject>
    <label>Training</label>
    <pluralLabel>Training Records</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Training Record Number</label>
        <displayFormat>TRN-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Object to track a volunteer's completion of a training module</description>
</CustomObject>