force-app/main/default/objects/vf_Training__c/fields/Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date__c</fullName>
    <label>Completion Date</label>
    <type>Date</type>
    <description>Date the training was completed</description>
    <inlineHelpText>The date when this training module was completed by the volunteer</inlineHelpText>
</CustomField>