force-app/main/default/objects/vf_Training__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <label>Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
    <description>Score achieved in the training (if applicable)</description>
    <inlineHelpText>The score achieved by the volunteer in this training module (if applicable)</inlineHelpText>
</CustomField>