force-app/main/default/objects/vf_Training__c/fields/Training_Module__c.field-meta.xml
<CustomField>
    <fullName>Training_Module__c</fullName>
    <label>Training Module</label>
    <referenceTo>vf_TrainingModule__c</referenceTo>
    <relationshipLabel>Training Records</relationshipLabel>
    <relationshipName>Training_Records</relationshipName>
    <type>Lookup</type>
    <description>Training module being completed</description>
    <inlineHelpText>The training module that this record tracks completion for</inlineHelpText>
</CustomField>