force-app/main/default/objects/vf_Training__c/fields/Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Volunteer__c</fullName>
    <label>Volunteer</label>
    <referenceTo>vf_Volunteer__c</referenceTo>
    <relationshipLabel>Training Records</relationshipLabel>
    <relationshipName>Training_Records</relationshipName>
    <type>Lookup</type>
    <description>Volunteer completing the training</description>
    <inlineHelpText>The volunteer who completed or is completing this training module</inlineHelpText>
</CustomField>